fix spacing

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -89,7 +89,7 @@
     }
 
     h4 {
-        margin-top: 2.4em;
+        margin-top: 2.8em;
         font-size: .75em;
         font-family: $sans-serif;
         text-transform: uppercase;
